--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -2,11 +2,11 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
-SPHINXBUILD   = sphinx-autobuild
+SPHINXOPTS    ?=
+SPHINXBUILD   ?= sphinx-autobuild
 SPHINXPROJ    = Pedal
 SOURCEDIR     = .
-BUILDDIR      = ../docs/
+BUILDDIR      = _build
 
 # Put it first so that "make" without argument is like "make help".
 help:
