--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Commit documentation changes
         run: |
           git clone https://github.com/pedal-edu/pedal.git --branch gh-pages --single-branch gh-pages
-          cp -r docsrc/_build/html/* gh-pages/
+          cp -r _build/html/* gh-pages/
           cd gh-pages
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
