Make sure it's not breaking because of autobuild isntead of build.

--- a/docsrc/Makefile
+++ b/docsrc/Makefile
@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    ?=
-SPHINXBUILD   ?= sphinx-autobuild
+SPHINXBUILD   ?= sphinx-build
 SPHINXPROJ    = Pedal
 SOURCEDIR     = .
 BUILDDIR      = _build
