Docs require dependecies

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v1
+      - run: |
+          pip install -r requirements_dev.txt
       # Build the documentation
       - uses: ammaraskar/sphinx-action@master
         with:
