--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -52,6 +52,7 @@ jobs:
           git clone https://github.com/pedal-edu/pedal.git --branch gh-pages --single-branch gh-pages
           cp -r docsrc/_build/html/* gh-pages/
           cd gh-pages
+          echo "" > .nojekyll
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
