--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,11 +29,16 @@ jobs:
         with:
           python-version: '3.9' 
       # Build the documentation
-      - uses: ammaraskar/sphinx-action@master
-        with:
-          pre-build-command: "python -m pip install -r requirements_dev.txt && python -m pip install -e ."
-          repo-token: "${{ secrets.GITHUB_TOKEN }}" 
-          docs-folder: "docsrc/"
+      - name: Build Documentation
+        run: |
+          cd docsrc/
+          python3.9 -m pip install -r requirements_dev.txt && python3.9 -m pip install -e .
+          make html -b coverage
+      #- uses: ammaraskar/sphinx-action@master
+      #  with:
+      #    pre-build-command: "python -m pip install -r requirements_dev.txt && python -m pip install -e ."
+      #    repo-token: "${{ secrets.GITHUB_TOKEN }}" 
+      #    docs-folder: "docsrc/"
       # Build PDF using custom depedencies
       #- uses: ammaraskar/sphinx-action@master
       #  with:
